src/test/ui/nll/user-annotations/method-ufcs-inherent-2.stderr
error[E0597]: `v` does not live long enough
  --> $DIR/method-ufcs-inherent-2.rs:16:37
   |
LL |     let x = A::<'a>::new::<&'a u32>(&v, &v);
   |                                     ^^ borrowed value does not live long enough
...
LL | }
   | - `v` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 14:8...
  --> $DIR/method-ufcs-inherent-2.rs:14:8
   |
LL | fn foo<'a>() {
   |        ^^

error[E0597]: `v` does not live long enough
  --> $DIR/method-ufcs-inherent-2.rs:16:41
   |
LL |     let x = A::<'a>::new::<&'a u32>(&v, &v);
   |                                         ^^ borrowed value does not live long enough
...
LL | }
   | - `v` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 14:8...
  --> $DIR/method-ufcs-inherent-2.rs:14:8
   |
LL | fn foo<'a>() {
   |        ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
